src/objects/Staff_Participation__c.object
<CustomObject>
    <fields>
        <fullName>Access_Budget_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to give permission to see budget vs. actual report data.</description>
        <inlineHelpText>Check this box to give permission to see budget vs. actual report data.</inlineHelpText>
        <label>Access Budget Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staff Participations</relationshipLabel>
        <relationshipName>Staff_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff Participation</relationshipLabel>
        <relationshipName>Staff_Participation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coordinator_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coordinator/Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliverables</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Staff Participation</relationshipLabel>
        <relationshipName>Staff_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Management</label>
        <referenceTo>Grant_Management__c</referenceTo>
        <relationshipLabel>Staff Participations</relationshipLabel>
        <relationshipName>Staff_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Staffer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this staffer a lead staffer on this record?</inlineHelpText>
        <label>Lead Staffer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Narrative_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Narrative Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Staff Participations</relationshipLabel>
        <relationshipName>Staff_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outreach</label>
        <referenceTo>Outreach__c</referenceTo>
        <relationshipLabel>Staff Participations</relationshipLabel>
        <relationshipName>Staff_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Staff Participations</relationshipLabel>
        <relationshipName>Staff_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Author</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Staff Participation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Deliverables__c</columns>
        <columns>Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Grant_Management__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPT-{00000}</displayFormat>
        <label>Staff Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>